Handle player queueing for normal games